Removed options for old java versions